hphp/hack/test/typecheck/multiple_concrete_consts.php.exp
File "multiple_concrete_consts.php", line 8, characters 11-11:
Class `I` does not correctly implement all required members  (Typing[4340])
  File "multiple_concrete_consts.php", line 8, characters 25-26:
  Some members are incompatible with those declared in type `I2`
  File "multiple_concrete_consts.php", line 3, characters 13-13:
  Non-abstract constants defined in an interface cannot conflict with other inherited constants.
  File "multiple_concrete_consts.php", line 6, characters 13-13:
  `X` inherited from `I2`
  File "multiple_concrete_consts.php", line 3, characters 13-13:
  conflicts with constant `X` inherited from `I1`.
